# textgrid-ipa

./: .gitignore  CITATION.cff  LICENSE  Pipfile  README.md  cli.py  convert.py  dependencies.md  deploy.sh  pylintrc  pyproject.toml  pytest.ini  requirements.txt  runner.py  setup.cfg  setup.py  silence_detection.py  todo.md
src/: cli.py
src/textgrid_tools/: __init__.py  comparison.py  globals.py  helper.py  interval_format.py  logging_queue.py  remove_silence.tests.py  sentence2words.py  utils.py  validation.py  wav2pauses.py  wav2pauses.tests.py
src/textgrid_tools/app/: __init__.py  audio_grid_syncing.py  common.py  export.py  external_datasets.py  globals.py  grid_audio_synchronization.py  grid_audio_syncronization.py  grid_interval_removal.py  grid_splitting.py  grid_stats_generation.py  grid_to_text_conversion.py  helper.py  main.py  mfa_utils.py  text_to_grid_conversion.py  tier_arpa_to_ipa_mapping.py  tier_boundary_adjustment.py  tier_cloning.py  tier_convert_text_to_symbols.py  tier_copying.py  tier_dictionary_creation.py  tier_interval_joining.py  tier_mapping.py  tier_moving.py  tier_normalization.py  tier_removal.py  tier_renaming.py  tier_symbol_removal.py  tier_words_mapping.py  tier_words_to_arpa_transcription.py  to_dataset.py  validation.py
src/textgrid_tools/core/: __init__.py  cloning.py  comparison.py  extract_audio.py  globals.py  helper.py  interval_format.py  main.py  mfa_utils.py  to_dataset.py  validation.py
src/textgrid_tools/grid/: __init__.py  audio_synchronization.py  creation.py  splitting.py  stats_generation.py
src/textgrid_tools/grids/: __init__.py  boundary_comparison.py  dictionary_creation.py  dictionary_exporting.py  durations_labelling.py  durations_plotting.py  grid_merging.py  marks_exporting.py  stats_generation.py
src/textgrid_tools/intervals/: __init__.py  between_marks_joining.py  between_pause_joining.py  boundary_fixing.py  boundary_joining.py  common.py  duration_joining.py  durations_plotting.py  joining.py  mark_joining.py  removing.py  sentence_joining.py  splitting.py  splitting_v2.py  symbols_joining.py  template_joining.py  text_replacement.py
src/textgrid_tools/old/: __init__.py  cli.py  durations.py  readme.md  remove_silence.py  words2ipa.py
src/textgrid_tools/tier/: __init__.py  cloning.py  copying.py  exporting.py  importing.py  mapping.py  moving.py  renaming.py  text_conversion.py
src/textgrid_tools/tiers/: __init__.py  arpa_to_ipa_transcription.py  marks_mapping.py  normalization.py  removing.py  silence_labeling.py  string_format_switching.py  symbol_removing.py  transcription.py  transcription_v2.py
src/textgrid_tools_cli/: __init__.py  cli.py  common.py  common_v2.py  common_v3.py  globals.py  helper.py  io.py  load_textgrid.py  logging_configuration.py  textgrid_io.py  validation.py
src/textgrid_tools_cli/grid/: __init__.py  audio_synchronization.py  creation.py  creation_v2.py  splitting.py  stats_generation.py
src/textgrid_tools_cli/grids/: __init__.py  audio_paths_exporting.py  audio_paths_importing.py  boundary_comparison.py  dictionary_creation.py  durations_labelling.py  durations_plotting.py  grid_durations_exporting.py  grid_paths_exporting.py  grid_paths_importing.py  grids_merging.py  marks_exporting.py  pronunciations_exporting.py  stats_generation.py  vocabulary_export.py
src/textgrid_tools_cli/intervals/: __init__.py  between_marks_joining.py  between_pause_joining.py  boundary_fixing.py  boundary_joining.py  duration_joining.py  durations_plotting.py  joining.py  mark_joining.py  removing.py  sentence_joining.py  splitting.py  splitting_v2.py  splitting_v3.py  symbols_joining.py  template_joining.py  text_replacement.py
src/textgrid_tools_cli/tier/: __init__.py  cloning.py  copying.py  exporting.py  importing.py  mapping.py  moving.py  renaming.py  text_conversion.py
src/textgrid_tools_cli/tiers/: __init__.py  arpa_to_ipa_transcription.py  marks_mapping.py  normalization.py  removing.py  silence_labeling.py  string_format_switching.py  symbol_removing.py  transcription.py  transcription_v2.py
src/textgrid_tools_cli_tests/: test_parse_codec.py  test_parse_float.py
src/textgrid_tools_old/: app_normalization.py  core_normalization.py  sentence_joining.py  test_join_intervals_on_sentences.py
src/textgrid_tools_old/app/: common_v2.py  creation_v2.py  io.py  splitting_v2.py
src/textgrid_tools_old/core/: core_sentence_joining.py
src/textgrid_tools_tests/: helper.py
src/textgrid_tools_tests/helper_py/: test_check_intervals_are_consecutive copy.py  test_set_intervals_consecutive.py
src/textgrid_utils/: __init__.py  globals.py  helper.py  interval_format.py  validation.py
src/textgrid_utils/grid/: __init__.py  audio_synchronization.py  creation.py  pause_detection.py.old  splitting.py  stats_generation.py
src/textgrid_utils/grids/: __init__.py  dictionary_creation.py  durations_plotting.py  grid_merging.py  marks_exporting.py
src/textgrid_utils/intervals/: __init__.py  between_pause_joining.py  boundary_fixing.py  boundary_joining.py  common.py  duration_joining.py  durations_plotting.py  mark_joining.py  removing.py  sentence_joining.py  splitting.py  splitting_v2.py  symbols_joining.py
src/textgrid_utils/tier/: __init__.py  cloning.py  copying.py  importing.py  mapping.py  moving.py  renaming.py  text_conversion.py
src/textgrid_utils/tiers/: __init__.py  marks_mapping.py  (+8 more)
src/textgrid_utils_cli/: __init__.py  cli.py  common.py  globals.py  helper.py  validation.py
src/textgrid_utils_cli_tests/: test_parse_float.py
src/textgrid_utils_old/: app_normalization.py  core_normalization.py  core_sentence_joining.py  sentence_joining.py  test_join_intervals_on_sentences.py
src/textgrid_utils_tests/: helper.py
textgrid_tools/: __init__.py  convert.py  convert.tests.py  durations.py  durations.tests.py  remove_silence.py  remove_silence.tests.py  runner.py  sentence2words.py  sentence2words.tests.py  silence_detection.py  silence_detection.tests.py  textgrid2dataset.py  textgrid2dataset.tests.py  utils.py  wav2pauses.py  words2ipa.py  words2ipa.tests.py
(+292 files in other folders)
