[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
testpaths = [
  "src/textgrid_tools_tests",
]
# slows down debugging
#addopts=-n8

[tool.autopep8]
indent-size = 2
ignore = ["E121"]
max_line_length = 100
