[project]
name = "textgrid-tools"
version = "0.0.4"
description = "Command-line interface (CLI) to modify TextGrids and their corresponding audio files."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Stefan Taubert", email = "stefan.taubert@posteo.me"}
]
maintainers = [
  {name = "Stefan Taubert", email = "stefan.taubert@posteo.me"},
]
keywords = [
  "Text-to-speech",
  "Speech synthesis",
  "praat",
  "TextGrid",
  "Utils",
  "Language",
  "Linguistics"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy>=1.18.5",
  "scipy>=1.8.0",
  "tqdm>=4.63.0",
  "TextGrid>=1.5",
  "pandas>=1.4.0",
  "ordered_set>=4.1.0",
  "matplotlib>=3.5.0",
  "pronunciation_dictionary>=0.0.4",
]

[project.urls]
Homepage = "https://github.com/stefantaubert/textgrid-ipa"
Issues = "https://github.com/stefantaubert/textgrid-ipa/issues"

[project.scripts]
textgrid-tools-cli = "textgrid_tools_cli.cli:run_prod"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "textgrid_tools",
  "textgrid_tools.*",
  "textgrid_tools_cli",
  "textgrid_tools_cli.*",
  "textgrid_tools_tests",
  "textgrid_tools_tests.*",
  "textgrid_tools_cli_tests",
  "textgrid_tools_cli_tests.*",
]
exclude = [
  "textgrid_tools_debug",
  "textgrid_tools_cli_debug",
  "textgrid_tools_old"
]
namespaces = true

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
testpaths = [
  "src/textgrid_tools_tests",
  "src/textgrid_tools_cli_tests"
]

[tool.autopep8]
indent-size = 2
ignore = ["E121"]
max_line_length = 100

[tool.isort]
line_length = 100
indent = 2
known_first_party = [
  "textgrid_tools",
  "textgrid_tools_cli"
]
known_third_party = [
  "scipy",
  "numpy",
  "tqdm",
  "TextGrid",
  "pandas",
  "ordered_set",
  "matplotlib",
  "pronunciation_dictionary"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310}
isolated_build = True

[testenv]
deps = 
  pytest
commands = 
  pytest
  textgrid-tools-cli
  textgrid-tools-cli -v
"""


[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"
