[metadata]
name = textgrid-tools
version = 1.0.0
author="Stefan Taubert"
author_email="stefan.taubert@posteo.de"
description="Utils for TextGrid processing."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefantaubert/textgrid-ipa.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    scipy
    numpy
    tqdm
    wget
    TextGrid
    pandas
    ordered-set
    text-utils@git+https://github.com/stefantaubert/text-utils.git
    cmudict-parser@git+https://github.com/stefantaubert/cmudict-parser.git
    audio-utils@git+https://github.com/stefantaubert/audio-utils.git

[options.packages.find]
where = src
